# song-guessr

./: .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml
song-guessr-server/: Cargo.toml
song-guessr-server/src/: api.rs  auth.rs  choice.rs  client.rs  game.rs  main.rs  model.rs  question.rs
src/: App.css  App.tsx  Game.tsx  GameResults.tsx  HomePage.tsx  LoadingPopup.tsx  QuestionResults.tsx  Room.tsx  Search.tsx  UserForm.tsx  WaitingRoom.tsx  model.tsx  utils.tsx
src/components/: LoadingPopup.tsx  Scoreboard.tsx  UserForm.tsx
