[package]
name = "song-guessr-server"
version = "0.1.0"
authors = ["Thang Pham <phamducthang1234@gmail.com>"]
edition = "2021"

[dependencies]
anyhow = "1.0.95"
axum = "0.7.9"
chrono = "0.4.39"
futures = "0.3.31"
futures-util = "0.3.31"
rand = "0.8.5"
rspotify = { version = "0.14.0", features = ["cli"] }
serde = "1.0.216"
tokio = { version = "1.41.1", features = [
  "rt",
  "rt-multi-thread",
  "macros",
  "time",
] }
tower-http = { version = "0.6.2", features = ["cors"] }
