[package]
name = "song-guessr-server"
version = "0.1.0"
authors = ["Thang Pham <phamducthang1234@gmail.com>"]
edition = "2021"

[dependencies]
anyhow = "1.0.96"
axum = { version = "0.7.9", features = ["ws"] }
chrono = "0.4.40"
dashmap = "6.1.0"
futures = "0.3.31"
futures-util = "0.3.31"
parking_lot = "0.12.3"
rand = "0.8.5"
rspotify = { version = "0.14.0", features = ["cli"] }
serde = "1.0.218"
serde_json = "1.0.139"
tokio = { version = "1.43.0", features = [
  "rt",
  "rt-multi-thread",
  "macros",
  "time",
  "sync",
] }
